RESOLVED FIXED272668
[UnifiedPDF] Can't drag-scroll (autoscroll) in main frame PDFs
https://bugs.webkit.org/show_bug.cgi?id=272668
Summary [UnifiedPDF] Can't drag-scroll (autoscroll) in main frame PDFs
Abrar Rahman Protyasha
Reported 2024-04-15 05:34:24 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2024-04-15 05:34:38 PDT
In fact, we can't autoscroll on embedded PDFs either.
Abrar Rahman Protyasha
Comment 2 2024-04-15 05:58:56 PDT
EWS
Comment 3 2024-04-16 12:26:31 PDT
Committed 277569@main (3a5275e3072b): <https://commits.webkit.org/277569@main> Reviewed commits have been landed. Closing PR #27257 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.